<resources>
    <string name="app_name">Inventory Room</string>

    <!-- Splash Activity -->
    <string name="ivLogoDesc">Inventory Logo (CC)2019</string>

    <!-- Login Activity -->
    <string name="chRemember">Remember me</string>
    <string name="btSignUp"><u>Sign Up</u></string>
    <string name="btSignIn">Sign In</string>
    <string name="edPassword">*******</string>
    <string name="tvPassword">Password</string>
    <string name="edUser" />
    <string name="tvUser">Username / e-mail address</string>
    <string name="tvOtherLogin">Or sign up with…</string>
    <string name="btGoogleDesc">SignUp with Google</string>
    <string name="btFacebookDesc">SignUp with Facebook</string>
    <string name="btTwitterDesc">SignUp with Twitter</string>

    <!-- DashBoard Activity -->
    <string name="btDependencies">Dependency</string>
    <string name="btSections">Section</string>
    <string name="btSettings">Settings</string>
    <string name="btProducts">Products</string>
    <string name="btProfile">Profile</string>
    <string name="btHelp">Help</string>
    <string name="btDependenciesDesc">List and manage Dependencies</string>
    <string name="btSectionsDesc">List and Manage Sections</string>
    <string name="btProductsDesc">List and manage Products</string>
    <string name="btProfileDesc">View and Manage your profile</string>
    <string name="btHelpDesc">¿How can we help you?</string>
    <string name="btSettingsDesc">Application Settings</string>

    <!-- SignUp Activity -->
    <string name="tilEdUser">Username</string>
    <string name="tilEdPassword1">Password</string>
    <string name="tilEdPassword2">Repeat Password</string>
    <string name="tilEdEmail">Email</string>
    <string name="btSend">SEND</string>

    <!-- Dependency -->
    <string name="delete_dependency">Delete dependency</string>
    <string name="delete_body">"Delete the dependency: "</string>
    <string name="tedDependencyName">Name</string>
    <string name="tedDependencyShortName">Short Name</string>
    <string name="tvInventory">Inventory</string>
    <string name="tedDependencyDescription">Description</string>

    <!-- Base Strings -->
    <string name="tvLoading">Loading…</string>
    <string name="action_delete">1 item deleted</string>
    <string name="action_undo">Undo</string>
    <string name="ivNoDataFoundDesc">No data found</string>

    <!-- Menu Strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_search">Search</string>
    <string name="menu_orderByName">Order by Name</string>
    <string name="menu_orderByInventory">Order by Inventory</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_options">Options</string>
    <string name="menu_dependency">Dependency</string>
    <string name="menu_section">Section</string>
    <string name="menu_product">Product</string>
    <string name="tvUserName" translatable="false">Raúl Prieto</string>
    <string name="tvEmail" translatable="false">raulaso@gmail.com</string>
    <string name="channel_name">inventory</string>
    <string name="channel_description">inventory_room</string>

</resources>
