<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_dependency"
            android:title="@string/menu_dependency" />
        <item
            android:id="@+id/action_section"
            android:title="@string/menu_section" />
        <item
            android:id="@+id/action_product"
            android:title="@string/menu_product" />
    </group>


    <item android:title="@string/menu_options">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/action_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/action_aboutus"
                android:title="@string/menu_aboutus" />

        </menu>
    </item>
</menu>