<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="10"
        android:title="@string/menu_search"
        android:id="@+id/action_search"
        app:showAsAction="always" />
    <item
        android:orderInCategory="98"
        android:id="@+id/action_settings"
        android:title="@string/menu_settings" />
    <item
        android:orderInCategory="99"
        android:id="@+id/action_help"
        android:title="@string/menu_help"
        />
    <item
        android:orderInCategory="100"
        android:id="@+id/action_aboutus"
        android:title="@string/menu_aboutus" />
</menu>