<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data />

    <!-- TODO iconos y redimensionado-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btDependencies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btDependencies" />

            <Button
                android:id="@+id/btSections"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btSections" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btSettings" />

            <Button
                android:id="@+id/btProducts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btProducts" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btProfile" />

            <Button
                android:id="@+id/btHelp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btHelp" />
        </TableRow>
    </TableLayout>
</layout>