<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilEdUser" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/tilUser"
            app:layout_constraintStart_toStartOf="@+id/tilUser"
            app:layout_constraintTop_toBottomOf="@+id/tilUser"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilEdPassword1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/tilPassword1"
            app:layout_constraintStart_toStartOf="@+id/tilPassword1"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword1"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilEdPassword2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/tilPassword2"
            app:layout_constraintStart_toStartOf="@+id/tilPassword2"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilEdEmail" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btSend"
            style="@style/Material.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btSignUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>